--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "fs-extra": "^11.3.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "prisma": "^6.2.1"
